[package]
name = "prometheum"
version = "0.1.0"
edition = "2021"
authors = ["Michael <michaeljosephvaden03@gmail.com>"]
description = "Game engine using Rust"
readme = "CRATEREADME.md"
license-file = "LICENSE.md"
keywords = ["gamedev", "engine"]

[dependencies]
prometheum-metal = { path = '../prometheum-metal' }